// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Testing snapshot for OptimizelyWeb's trackEvent destination action: all fields 1`] = `
Object {
  "account_id": "PXs*Kr1gqV9(",
  "anonymize_ip": true,
  "client_name": "twilio_segment/optimizely_web_destination",
  "client_version": "1.0.0",
  "enrich_decisions": true,
  "project_id": -9262421990440.96,
  "visitors": Array [
    Object {
      "attributes": Array [],
      "session_id": "PXs*Kr1gqV9(",
      "snapshots": Array [
        Object {
          "decisions": Array [],
          "events": Array [
            Object {
              "entity_id": "custom_event_id_1",
              "key": "custom_event_1",
              "quantity": -926242199044096,
              "revenue": -926242199044096.1,
              "tags": Object {
                "$opt_event_properties": Object {
                  "customBooleanProperty1": true,
                  "customBooleanProperty2": false,
                  "customNumericProperty1": 1,
                  "customNumericProperty2": 2,
                  "customStringProperty1": "custom_string_property_1",
                  "customStringProperty2": "custom_string_property_2",
                },
                "testType": "PXs*Kr1gqV9(",
              },
              "timestamp": 1612137600000,
              "type": "other",
              "uuid": "PXs*Kr1gqV9(",
              "value": -9262421990440.96,
            },
          ],
        },
      ],
      "visitor_id": "PXs*Kr1gqV9(",
    },
  ],
}
`;

exports[`Testing snapshot for OptimizelyWeb's trackEvent destination action: required fields 1`] = `
Object {
  "account_id": "PXs*Kr1gqV9(",
  "anonymize_ip": true,
  "client_name": "twilio_segment/optimizely_web_destination",
  "client_version": "1.0.0",
  "enrich_decisions": true,
  "project_id": -9262421990440.96,
  "visitors": Array [
    Object {
      "attributes": Array [],
      "snapshots": Array [
        Object {
          "decisions": Array [],
          "events": Array [
            Object {
              "entity_id": "custom_event_id_1",
              "key": "custom_event_1",
              "tags": Object {
                "$opt_event_properties": Object {
                  "customBooleanProperty1": true,
                  "customBooleanProperty2": false,
                  "customNumericProperty1": 1,
                  "customNumericProperty2": 2,
                  "customStringProperty1": "custom_string_property_1",
                  "customStringProperty2": "custom_string_property_2",
                },
              },
              "timestamp": 1612137600000,
              "type": "other",
              "uuid": "PXs*Kr1gqV9(",
            },
          ],
        },
      ],
      "visitor_id": "PXs*Kr1gqV9(",
    },
  ],
}
`;
